--- a/public/themes/pc/assets/css/index.css
+++ b/public/themes/pc/assets/css/index.css
@@ -689,7 +689,7 @@ font-weight: bold;
 .tips .btn{margin:80px auto 0 auto}
 .tips .btn img{width: 100%;}
 #g2-park1{display: none;width: 100%;height: 100%}
-#g2-park2{display: none;width: 100%;height: 100%}
+#g2-park2{display: none;width: 100%;height: 100%;}
 #g2-park2 #video_box{width: 100%;height: 100%}
 #g2-park2-video{position: absolute;}
 #g2-park3{display: none;width: 100%;height: 100%;background: url(../images/b1.jpg) no-repeat center/cover}
@@ -706,7 +706,7 @@ font-weight: bold;
 #g2-park8{display: none;width: 100%;height: 100%;background: url(../images/b3.jpg) no-repeat center/cover}
 #g2-park8 textarea{position: absolute;bottom: 14%;left:3.5%;;width: 85%;height:35%;background: #e5e5e5;border-radius: 10px;border:none;padding:3% 4%;font-size: 20px;color: #000;}
 #g2-park9{display: none;width: 100%;height: 100%;}
-
+.jump{position: absolute;z-index: 333;right: 2%;top:2%;;}
 .g2-result{margin:0 auto}
 .g2-result img{width: 100%;}
 #g2-park8 .textarea{width:740px}
