--- a/public/themes/pc/assets/css/index.css
+++ b/public/themes/pc/assets/css/index.css
@@ -760,8 +760,8 @@ font-weight: bold;
 .reflect-item-des img{width: 100%;}
 
 #g1-park2 .tips{padding:0}
-#g1-park2 .g1-video-box{width: 88.5%;margin:0 auto}
-#g1-park2 .g1-video-box .g1-video-item{width: 15.5%;float: left;margin:0 0.55% 10px 0.55%;cursor: pointer;box-shadow: 0 5px 20px #aaa;position: relative;}
+#g1-park2 .g1-video-box{width: 86.5%;margin:0 auto;background:#fff;padding:1% 1%;border-radius:15px;}
+#g1-park2 .g1-video-box .g1-video-item{width: 15.5%;float: left;margin:5px 0.55% 5px 0.55%;cursor: pointer;position: relative;}
 #g1-park2 .g1-video-box .g1-video-item.active:after{content: "";position: absolute;width: 30%;height: 100%;background: url(../images/m1.png) no-repeat top right/100% auto;top: 0;right: 0;margin-left: 15px;;}
 
 #g1-park2 .question-power3{margin:2% auto}
@@ -823,12 +823,12 @@ font-weight: bold;
 #g1-park5 .g1-video-item2:nth-of-type(6){top: 100px;left: 82.5%} */
 #g1-park5 .moveBox {width: 75.2%;margin:0 auto}
 #g1-park5 .g1-video-box{width: 71%;float: left;position: relative;background: #fff;border-radius: 10px;}
-#g1-park5 .classify{width: 24%;float: right;}
+#g1-park5 .classify{width: 26%;float: right;}
 #g1-park5 .classify-1{}
 #g1-park5 .classify-2{margin-top: 20px}
 
 
-#g1-park7 .g1-video-item3{width: 15%;float: left;cursor: pointer;}
+#g1-park7 .g1-video-item3{width: 15%;float: left;cursor: pointer;z-index:-100}
 #g1-park7 .g1-video-item3.active{opacity: 0.7;}
 #g1-park7 .g1-video-item3.c1:after{content: "";position: absolute;width: 30px;height: 30px;background: url(../images/m1.png) no-repeat center/100% 100%;top: 0;right: 0;margin-left: 15px;;}
 #g1-park7 .g1-video-item3.c2:after{content: "";position: absolute;width: 30px;height: 30px;background: url(../images/m2.png) no-repeat center/100% 100%;top: 0;right: 0;margin-left: 15px;;}
