git-svn-id: https://39.108.144.9:8443/svn/education_game@54 25e0eac6-5c60-e44f-9c6f-99974a5b1bee

--- a/public/themes/admin/assets/css/main.css
+++ b/public/themes/admin/assets/css/main.css
@@ -168,5 +168,10 @@ button.layui-close{
 	padding:0 !important;
 	
 }
+.option_selected{
 
+    background: #eee;
+    padding:2px 2px !important;
+    border-radius:5px;
+}
 
