git-svn-id: https://39.108.144.9:8443/svn/education_game@58 25e0eac6-5c60-e44f-9c6f-99974a5b1bee

--- a/public/themes/admin/assets/css/main.css
+++ b/public/themes/admin/assets/css/main.css
@@ -181,4 +181,8 @@ button.layui-close{
 	padding:5px 10px;
     border-radius:5px;
 }
-
+.layui-form-item .zanItem{margin-bottom:5px;}
+.layui-form-item .zanItem.option_selected{
+	padding-left:50px;
+	background:#21759e url("../img/zan.png") no-repeat 10px center/30px auto;
+}
